<resources>
    <string name="app_name">My Application</string>
    <string name="log_in">Login</string>
    <string name="e_mail">Email or Phone Number</string>
    <string name="foegot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="button_name">LOGIN</string>
    <string name="error_msg">This field is required</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="massege">The link to reset your password will be sent to your registered email.</string>
    <string name="email">Email</string>
    <string name="conti">CONTINUE</string>
    <string name="error_1">This is not a valid email.</string>
    <string name="error_2">This email is not registered with us.</string>
    <string name="error_3">Error message</string>
    <string name="Forgot">FORGOT PASSWORD</string>
    <string name="sucesess_message">The link has been sent to your email. The generated link will be active for 24 hours.</string>
    <string name="cancel">Cancel</string>
    <string name="clear">CLEAR</string>
    <string name="approved">APPROVED</string>
    <string name="draft">DRAFT</string>
    <string name="awaiting">AWAITING</string>
    <string name="rejected">REJECTED</string>
    <string name="my">My Requests</string>
    <string name="new_re">NEW REQUEST</string>
    <string name="filter">FILTER</string>
    <string name="showing">Showing approved requests.</string>
    <string name="pur">PUR - 2019 - 056</string>
    <string name="sub">Submitted on</string>
    <string name="july">06 Jul 2019</string>
    <string name="app">APPROVED</string>
    <string name="show">SHOW MORE</string>
    <string name="approvel">AWAITING APPROVAL</string>
    <string name="req">REQUISITION</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="dash">- - - - -</string>
    <string name="note">NOTE</string>
    <string name="loren">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis, tortor sit amet tempor vehicula.</string>
    <string name="reject">REQUEST TYPE</string>
    <string name="self">SELF</string>
    <string name="team">TEAM / DEPARTMENT / BRANCH</string>
    <string name="some">SOMEONE ELSE</string>
    <string name="save">SAVE DRAFT</string>
    <string name="nxt">NEXT</string>
    <string name="menu">menu</string>
    <string name="items">ITEMS</string>
    <string name="loren_item">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="add">ADD ITEMS</string>
    <string name="num_one">01</string>
    <string name="date">10 Jul 2019</string>
    <string name="rs">45,000</string>
    <string name="ibm">IBM ThinkServer TS150 Tower Server With Max. Processor 1 x Intel Xeon E3 (Quad Core) E3-1225 v5"(3.3 GHz /Cache 8 MB)... </string>
    <string name="read">READ MORE</string>
    <string name="attachment">ATTACHMENTS</string>
    <string name="attach_files">ATTACH FILES</string>
    <string name="invite_people">INVITE PEOPLE</string>
    <string name="add_peopel">ADD PEOPLE</string>
    <string name="luke">Luke Ray</string>
    <string name="amet">Lorem ipsum doler sit amet.</string>
    <string name="daisy">Daisy Lake</string>
    <string name="mark">Mark Smith</string>
    <string name="approval">APPROVAL(S)</string>
    <string name="add_approval">ADD APPROVER</string>
    <string name="ack">ACKNOWLEDGEMENT</string>
    <string name="registred">Your request has been registered.</string>
    <string name="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis, tortor sit amet tempor vehicula, tortor ipsum faucibus nunc, id aliquam lacus odio nec magna. Cras a ipsum placerat, efficitur nibh sed, iaculis elit. Mauris semper tempor facilisis.</string>
    <string name="abc">abc0037429023.doc</string>
    <string name="kb">976KB    </string>
    <string name="upload">UPLOAD</string>
    <string name="write">write the description…</string>
    <string name="preview">PREVIEW</string>
    <string name="type">REQUEST TYPE - SELF</string>
    <string name="thinkcenter">Lenovo ThinkServer TS450 (PN:70M2001VIH) With Max. Processor 1 x Intel Xeon E3 (Quad Core) E3-1225 v5”(3.3 GHz /Cache 8 MB)/ STD MEMORY 8GB X 1 MAX. MEMORY 64GB; 4 DIMM Memory Slots/ HARD DRIVE Open Bay/ 2.5” SAS/SATA HS Bays (8 bay MAX. HDD BAY upto 8 x 2.5” bay MAX. HDD BAY upto 16x2.5”)/OPTICAL Multi Burner/ PCIe RAID 0,1,10 (RAID 520i). Supports SAS  SATA drives/Power Supply Standard (Inbuilt) 1 x 450W Power Supply /Max: 2</string>
    <string name="controller">daptec 128 MB Raid Controller Pair. Pci-e SAS/SATA</string>
    <string name="saved">Your request has been saved as draft.</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur…</string>
</resources>
