<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:background="@drawable/menu_border">

        <ImageView
            android:layout_width="108dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/Forgot"
            android:src="@drawable/menu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:background="@drawable/requesition_border">

        <TextView
            android:id="@+id/textView8"
            tools:text="@string/req"
            android:layout_width="406dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="106dp"
            android:padding="20dp"
            android:text="@string/req"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/circle_color_less"
            android:gravity="center"
            android:text="@string/one"
            android:textColor="@color/round_font_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="58dp"
            android:layout_marginLeft="58dp"
            android:layout_marginBottom="71dp"
            android:text="@string/dash" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="94dp"
            android:layout_marginLeft="94dp"
            android:layout_marginBottom="66dp"
            android:background="@drawable/circle_color_less"
            android:gravity="center|center_horizontal"
            android:text="@string/two"
            android:textColor="@color/round_font_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:layout_marginBottom="71dp"
            android:text="@string/dash" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="161dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/circle"
            android:gravity="center|center_horizontal"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="191dp"
            android:layout_marginLeft="191dp"
            android:layout_marginBottom="71dp"
            android:text="@string/dash" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="227dp"
            android:layout_marginLeft="227dp"
            android:layout_marginBottom="63dp"
            android:background="@drawable/circle_color_less"
            android:gravity="center|center_horizontal"
            android:text="@string/four"
            android:textColor="@color/round_font_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="294dp"
            android:layout_marginLeft="294dp"
            android:layout_marginBottom="62dp"
            android:background="@drawable/circle_color_less"
            android:gravity="center|center_horizontal"
            android:text="@string/five"
            android:textColor="@color/round_font_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="257dp"
            android:layout_marginLeft="257dp"
            android:layout_marginBottom="71dp"
            android:text="@string/dash" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="355dp"
            android:layout_marginLeft="362dp"
            android:layout_marginBottom="62dp"
            android:background="@drawable/circle_color_less"
            android:gravity="center|center_horizontal"
            android:text="@string/six"
            android:textColor="@color/round_font_color"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="325dp"
            android:layout_marginLeft="325dp"
            android:layout_marginBottom="71dp"
            android:text="@string/dash" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:background="@drawable/item_border">


        <TextView
            android:id="@+id/T1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="22dp"
            android:text="@string/attachment"
            android:textColor="@color/attachment"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/T2"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/loren_item"
            android:textColor="@color/loren_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/attach_files"
            android:textColor="@color/attachment"
            android:textSize="14sp"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="68dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:src="@drawable/attach_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="397dp"
        android:layout_height="137dp">

        <RelativeLayout
            android:id="@+id/R2"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="83dp"
            android:background="@drawable/border"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/abc"
                android:textColor="@color/kb"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/T3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/kb"
                android:textColor="@color/kb"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="152dp"
            android:layout_height="85dp"
            android:layout_alignBottom="@+id/R2"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="-33dp"
            android:layout_toRightOf="@+id/R2"
            android:background="@color/upload"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:textColor="@color/white"
                android:textSize="14dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editText5"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="57dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/write"
            android:inputType="textPersonName" />

        <RelativeLayout
            android:layout_width="373dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="24dp"
            android:background="@color/error">

            <ImageView
                android:id="@+id/image12"
                android:layout_width="43dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="314dp"
                android:layout_marginRight="314dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/error" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="207dp"
                android:layout_marginRight="207dp"
                android:text="@string/error_msg"
                android:textColor="#CB1720"
                android:textSize="12sp" />

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="289dp"
            android:layout_marginRight="289dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/underline"
            android:text="@string/save"
            android:textColor="@color/attachment"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/log_in_botton"
            android:text="@string/nxt"
            android:textColor="@color/white" />

    </RelativeLayout>


</LinearLayout>