<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA"
        android:orientation="horizontal"
        android:padding="25sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="20sp">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/foegot_password"
                    android:textColor="#747474"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/massege"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70sp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/email" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="127sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="90sp"
                    android:text="@string/conti"
                    android:textColor="#fff"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:background="@drawable/log_in_botton"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>